feat(localnotification): move nav view (removed app.part.html)

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
     <!-- app:js --><!-- endinject -->
   </head>
   <body ng-app="app">
-    <ng-include src="'app/app.part.html'"></ng-include>
+    <ion-nav-view class="appView"></ion-nav-view>
   </body>
 </html>
