feat(splashfixes): black background

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <script src="cordova.js"></script>
     <!-- app:js --><!-- endinject -->
   </head>
-  <body ng-app="app">
+  <body ng-app="app" style="background-color:black">
     <ion-nav-view class="appView"></ion-nav-view>
   </body>
 </html>
