chore(*): update module names

--- a/state/home/home.part.html
+++ b/state/home/home.part.html
@@ -56,7 +56,7 @@
           <!-- eof text -->
           <div class="moreImagesText">{{'EOF_IMAGE' | translate}}</div>
           <!-- eof image -->
-          <div class="image" style="background-image:url('app/state/home/eof.jpg')"></div>
+          <div class="image" style="background-image:url('state/home/eof.jpg')"></div>
         </div>
       </gw-mob-eof>
     </gw-mob-fixedslider>
