--- a/state/home/mobileselect/mobileselect.part.html
+++ b/state/home/mobileselect/mobileselect.part.html
@@ -1,6 +1,6 @@
 <gw-mob-popup-contact
   showemailaddress="false"
-  mobilenumberlabel="{{'MUM_MOB' | translate}}"
+  mobilenumberlabel="{{'RECIPIENT_MOB' | translate}}"
   selectbuttontext="{{'SEL_CONT' | translate}}"
   okbuttontext="{{'SEND' | translate}}"
   cancelbuttontext="{{'CANCEL' | translate}}"
