feat(renamegmc): rename mImages service to images

--- a/state/home/home.part.html
+++ b/state/home/home.part.html
@@ -20,7 +20,7 @@
     <div class="debugButton" on-tap="debugButtonClick()"></div>
     <!-- image slides -->
     <gw-mob-fixedslider
-      items="images"
+      items="chosenImages"
       currentitem="imageSlider.currentImage"
       eof="imageSlider.eof"
       swipeleft="imageSlider.swipeLeft"
@@ -53,7 +53,7 @@
     </gw-mob-fixedslider>
     <!-- text slides -->
     <gw-mob-fixedslider
-      items="texts"
+      items="chosenTexts"
       currentitem="textSlider.currentText"
       eof="textSlider.eof"
       swipeLeft="textSlider.swipeLeft"
