--- a/state/home/sendmethod/sendmethod.part.html
+++ b/state/home/sendmethod/sendmethod.part.html
@@ -1,9 +1,11 @@
 <gw-mob-popup-sendmethod
-  facebookenabled = "false"
   emaillabel="{{'SND_EMAIL' | translate}}"
   smslabel="{{'SND_SMS' | translate}}"
-  facebooklabel="{{'SND_FB' | translate}}"
+  facebooklabel="{{'SND_FACEBOOK' | translate}}"
   cancellabel="{{'CANCEL' | translate}}"
+  smsenabled="smsEnabled"
+  emailenabled="emailEnabled"
+  facebookenabled="facebookEnabled"
   smsselected="smsSelected()"
   emailselected="emailSelected()"
   facebookselected="facebookSelected()"
