feat(sendfacebook): implement facebook send

--- a/state/home/home.part.html
+++ b/state/home/home.part.html
@@ -38,7 +38,7 @@
       <gw-mob-slide>
         <div class="imageContainer" style="height:{{slideImageHeight}}px">
           <!-- image -->
-          <div class="image" style="background-image:url('{{getImageUrl(item)}}')"></div>
+          <div class="image" style="background-image:url('{{getImageLocalUrl(item)}}')"></div>
         </div>
       </gw-mob-slide>
       <!-- eof slide -->
